# PDFPreview

./: .gitignore  CHANGELOG.md  FileViewer.spec  Files Safe to Delete from dist.txt  Ideas to implement.txt  PDFPreview-Splash.docx  PDFViewer.spec  PDFViewerSplash.html  README.md  TODOs.md  TODOs.txt  app.pyw  change_list.txt  change_log.txt  makefile  pyinstaller command.txt  pyproject.toml  uv.bat
PDFPreview/: __init__.py  change_list.txt  config.py  constants.py  contextmenu.py  contextmenuactions.py  debug.py  effects.py  main.py  recents.py  viewer.py
PDFPreview/database/: bookmark_repository.py  db.py  recent_repository.py
PDFPreview/eventfilters/: about_eventfilter.py  about_filter.py  bookmark_eventfilter.py  bookmarklist.py  global_filter.py
PDFPreview/gui/: __init__.py  about.py  customwidgets.py  mainwindow.py  ui_about.ui  ui_mainwindow.py  ui_mainwindow.ui
PDFPreview/gui/dialogs/: about.py  ui_about.ui
PDFPreview/gui/widgets/: listwidget.py  treeview.py
PDFPreview/helpers/: bookmarks.py  eventfilters.py  favorites.py  fileoperations.py  gui.py  paths.py  recents.py  sound.py
PDFPreview/models/: bookmark.py  recent.py
PDFPreview/services/: bookmark_service.py  recent_service.py
Resources/Files/: FileViewerSplash.html  config.toml
config/: config.py
scripts/: Files Safe to Delete from dist.txt  _build.bat  _bump.bat  _cleandist.bat  _copyfiles.bat  _dist.bat  _insertversion.bat  _insertversion.py  _makedeploy.bat  bump.bat  cleandist.bat  insertversion.bat  makemajorrelease.bat  makeminorrelease.bat  makepatchrelease.bat  makeredeploy.bat
(+1 files in other folders)
