[project]
name = "pdfpreview"
version = "0.8.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14.2"
dependencies = [
    "loguru>=0.7.3",
    "pathvalidate>=3.3.1",
    "pyside6>=6.10.2",
    "tinydb>=4.8.2",
]

[dependency-groups]
dev = [
    "icecream>=2.1.10",
]
